FIX attempt for jarring scrolling effect on mobile 10

--- a/projects/work 1/Deadspace (2008)/css/deadspace_common.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_common.css
@@ -35,10 +35,10 @@ div.whited {
 }
 main div {
   height: 100vh;
-  max-height: 90svh;
+  max-height: 90dvh;
   align-content: center;
   padding: 0 8vw;
-  background-color: pink;
+  background-color: yellowgreen;
 }
 div.half {
   height: 30vh;
