--- a/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
@@ -17,7 +17,7 @@ main {
 main div {
   padding: 0 1vw;
   height: 100vh;
-  max-height: 100svh;
+  max-height: 100dvh;
 }
 p {
   font-size: 0.9rem;
